# rubberduck

./: .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  install.ps1  install.sh  questions.de.yaml  questions.en.yaml  questions.es.yaml  questions.fr.yaml  questions.yaml  tips.de.yaml  tips.en.yaml  tips.es.yaml  tips.fr.yaml  typos.toml  uninstall.sh
.github/: dependabot.yml  labeler.yml
.github/workflows/: audit.yml  ci.yml  coverage.yml  docs.yml  labeler.yml  lint.yml  release.yml
src/: app.rs  cli.rs  config.rs  demo.rs  dialog.rs  doctor.rs  duck.rs  history.rs  i18n.rs  lib.rs  main.rs  paths.rs  questions.rs  selfcmd.rs  session.rs  stats.rs  tips.rs  util.rs
src/ui/: animate.rs  bar.rs  duck.rs  gradient.rs  mod.rs  scene.rs  spinner.rs  surface.rs  text.rs  theme.rs
tests/: cli.rs
