[package]
name = "rubberduck-cli"
version = "1.0.0"
edition = "2021"
rust-version = "1.88"
description = "An offline rubber-duck-debugging companion for your terminal — an animated ASCII duck asks structured questions until you find the bug yourself."
license = "MIT"
repository = "https://github.com/j-pfalzgraf/rubberduck"
homepage = "https://github.com/j-pfalzgraf/rubberduck"
readme = "README.md"
keywords = ["debugging", "cli", "rubber-duck", "productivity", "tui"]
categories = ["command-line-utilities", "development-tools::debugging"]

# The binary stays `rubberduck`; the crate is `rubberduck-cli` (for `cargo install`).
[[bin]]
name = "rubberduck"
path = "src/main.rs"

[lib]
name = "rubberduck_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
clap_mangen = "0.3"
dialoguer = "0.12"
crossterm = "0.29"
unicode-width = "0.2"
ctrlc = "3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
directories = "6"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
self-replace = "1"
# Only active via the `vendored-openssl` feature; then statically builds OpenSSL
# from source (portable release binaries, also when cross-compiling).
openssl = { version = "0.10", optional = true }
# Default TLS (native-tls/OpenSSL); locally via system OpenSSL, in CI built
# statically via `--features vendored-openssl`.
self_update = { version = "0.44", features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
] }

[features]
# For portable release binaries: builds OpenSSL from source (perl + make, no
# cmake required) and links it statically.
vendored-openssl = ["dep:openssl", "openssl/vendored"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

# Lean, fast-starting release binary (success criterion: startup < 2 s).
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
